Tests and rewrite
